--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\Robert\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
+    "python.pythonPath": "C:\\Users\\Robert\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
+    "git.ignoreLimitWarning": true
 }
